# ElectronicStetoscope-Automizer-

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirenments.txt
app/: main.py  models.py
docs/: ml_system_design_doc.md
electronicstetoscope-automizer-/: main.py  models.py
notebooks/: EDA.ipynb  binary_datasets_.py  binary_learning_networks.ipynb  eda_preprocess_data.ipynb  first_trains.ipynb  multi_tran_utils.py  multilabel_trainings.ipynb  pulse.ipynb  voice_cutting.ipynb
