[tool.poetry]
name = "electronicstetoscope-automizer-"
version = "0.1.0"
description = ""
authors = ["Anna Tk"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
joblib = "^1.4.2"
numpy = "^2.2.2"
scipy = "^1.15.1"
pandas = "^2.2.3"
pywavelets = "^1.8.0"
scikit-learn = "^1.6.1"
streamlit = "^1.41.1"
librosa = "0.9.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
